--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
-    <title>My Portofolio | aneva Kalonika</title>
+    <title>My Website Portofolio|Hafidz Abdillah</title>
   </head>
   <body id="home">
       <!-- Awal Navbar -->
