--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       style="background-color: #7C83FD">
       
         <div class="container"> 
-          <a class="navbar-brand" href="#">Zaneva Kalonika</a>
+          <a class="navbar-brand" href="#">Hafidz Abdillah</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
