--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#about">Tentang</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#talents">Talents</a>
+                <a class="nav-link" href="#talents">Hobi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -46,10 +46,10 @@
 
       <!-- Awal Jumbotron -->
       <section class="jumbotron text-center">
-          <img src="img/Foto Andalan.jpg" alt="Zaneva Kalonika" width="200"
+          <img src="img/Foto Andalan.jpg" alt="My Foto Hafidz Abdillah" width="200"
           class="rounded-circle img-thumbnail">
-        <h1 class="display-4">Zaneva Kalonika</h1>
-        <p class="lead">Student | Programmer</p>
+        <h1 class="display-4">Hafidz Abdillah</h1>
+        <p class="lead">Student | Programmer Beginner</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,85.3C96,75,192,53,288,53.3C384,53,480,75,576,106.7C672,139,768,181,864,181.3C960,181,1056,139,1152,117.3C1248,96,1344,96,1392,96L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       </section>
       <!-- Akhir Jumbotron -->
