--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!-- Awal Jumbotron -->
       <section class="jumbotron text-center">
-          <img src="img/Foto Andalan.jpg" alt="My Foto Hafidz Abdillah" width="200"
+          <img src="aku.jpg" alt="My Foto Hafidz Abdillah" width="200"
           class="rounded-circle img-thumbnail">
         <h1 class="display-4">Hafidz Abdillah</h1>
         <p class="lead">Student | Programmer Beginner</p>
@@ -64,10 +64,10 @@
             </div>
             <div class="row justify-content-center fs-5 text-center">
                 <div class="col-md-4">
-                <p>Hellow everyone!! My name is Zaneva Kalonika Handoko, you can call me Neva. I'm from Indonesia precisely in Surakarta, but now I'm in Wonogiri because of this pandemic.</p>
+                <p>Hello guys. My name is <a href="https://www.instagram.com/hafidzabdillh_" class="text-dark fw-bold">Hafidz Abdillah</a> .Usually called Hafiz.I live in Kaliwungu, Semarang Regency</p>
             </div>
                 <div class="col-md-4">
-                <p>I was born in Surakarta, 7th July 2009. Now i'm 12 years old. My hobby is playing music and programming. I have sister named <a href="https://www.instagram.com/cleooeo/" class="text-dark fw-bold">Cleova Viskhiela Handoko</a> and you can call her Cleo.</p> 
+                <p>I was born in Semarang Regency, 11th July 2007. Now i'm 16 years old. My hobby is Hiking mountain and programming.</p> 
         </div>
             </div>
         </div>
