--- a/index.html
+++ b/index.html
@@ -86,30 +86,13 @@
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-3">
                     <div class="card">
-                        <img src="img/talents/1.jpg" class="card-img-top" alt="Talents 1">
+                        <img src="img/talents/2.jpg" class="card-img-top" alt="Talents 1">
                         <div class="card-body">
-                          <p class="card-text text-center">" " " "</p>
+                          <p class="card-text text-center">"I really like playing the guitar, I already know the guitar from grade 6 elementary school" </p>
                           <p class="card-text"></p>
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/talents/2.jpg" class="card-img-top" alt="Talents 2">
-                        <div class="card-body">
-                          <p class="card-text text-center">" " " "</p>
-                          <p class="card-text"></p>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/talents/3.jpg" class="card-img-top" alt="Talents 3">
-                        <div class="card-body">
-                          <p class="card-text text-center">" " " "</p>
-                          <p class="card-text"></p>
-                        </div>
-                      </div>
                 </div>
             </div>
         </div>
@@ -160,7 +143,7 @@
 
       <!-- Awal Footer -->
       <footer class="text-white text-center pb-5" style="background-color: #7C83FD;">
-          <p>Created with <i class="bi bi-heart-fill text-danger"></i>by  <a href="https://www.instagram.com/zanevakalonika/" class="text-white fw-bold">Zaneva Kalonika</a></p>
+          <p>Created with <i class="bi bi-heart-fill text-danger"></i>by  <a href="https://www.instagram.com/hafidzabdillh_" class="text-white fw-bold">Hafidz Abdillah</a></p>
       </footer>
       <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
