--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!-- Awal Jumbotron -->
       <section class="jumbotron text-center">
-          <img src="aku.jpg" alt="My Foto Hafidz Abdillah" width="200"
+          <img src="https://telegra.ph/file/f805a07e3c56c78dcbcd4.jpg" alt="My Foto Hafidz Abdillah" width="200"
           class="rounded-circle img-thumbnail">
         <h1 class="display-4">Hafidz Abdillah</h1>
         <p class="lead">Student | Programmer Beginner</p>
