--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    	<audio controls autoplay hidden>
+        <source src="NDX AKA - Nemen HipHop Dangdut Version ( Official Lyric Video ).mp3" type="audio/mpeg">
+    </audio>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -148,6 +151,12 @@
       <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
+<script> 
+     alert("Hello Welcome To My Blogger"); 
+</script> 
+<script> 
+     alert("Iam Beginner:)"); 
+</script> 
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbzCqU4KEK46LcmUXLiRu23jGlUBkmE2orm1vC0y1_r-DnrYeMuwAVcvMnMMA933hJ4vCg/exec'
         const form = document.forms['contact-form']
