--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    	<audio controls autoplay hidden>
-        <source src="NDX AKA - Nemen HipHop Dangdut Version ( Official Lyric Video ).mp3" type="audio/mpeg">
-    </audio>
+    	<audio autoplay="true">
+    <source src="NDX AKA - Nemen HipHop Dangdut Version ( Official Lyric Video ).mp3" type="audio/mpeg">
+    Browsermu tidak mendukung tag audio, upgrade donk!
+</audio>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
